# iris

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .justfile  .mise.toml  .npmrc  .pkgx.yaml  .prettierrc  .say.yaml  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dockerignore  LICENSE  README.md  bayt.cue  bootstrap  bootstrap.ps1  buf.work.yaml  build.gradle.kts  compose-cache.json  compose.ci.yaml  compose.override.yaml  compose.yaml  copy.bara.sky  docker-bake.override.hcl  docker.cue  gradle.properties  integrate.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run-copybara-local.sh  sayt_tool.cue  settings.gradle.kts  turbo.json
gradle/: libs.versions.toml
libraries/: WORKSPACE.bazel  junit5.bzl  kt_jvm_grpc_head.bzl  maven_install.json
libraries/logs/: .mise.toml  BUILD.bazel  Dockerfile  Dockerfile.cue  Taskfile.yml  bayt.cue  build.gradle.kts  gradle.properties  settings.gradle.kts
libraries/logs/.bayt/: Dockerfile._bayt  Dockerfile.build  Dockerfile.build_outs  Dockerfile.build_srcs  Dockerfile.integrate  Dockerfile.integrate_outs  Dockerfile.integrate_srcs  Dockerfile.ops  Dockerfile.ops_outs  Dockerfile.ops_srcs  Dockerfile.setup  Dockerfile.setup_outs  Dockerfile.setup_srcs  Taskfile.bayt.yml  Taskfile.build.yaml  Taskfile.integrate.yaml  bayt.bayt.json  bayt.build.json  bayt.build_outs.json  bayt.build_srcs.json  bayt.doctor.json  bayt.generate.json  bayt.integrate.json  bayt.integrate_outs.json  bayt.integrate_srcs.json  bayt.lint.json  bayt.ops.json  bayt.ops_outs.json  bayt.ops_srcs.json  bayt.setup.json  bayt.setup_outs.json  bayt.setup_srcs.json  bayt.test.json  compose._bayt.closure.yaml  compose._bayt.yaml  compose.bayt.deps.yaml  compose.bayt.yaml  compose.build.yaml  compose.build_outs.yaml  compose.build_srcs.closure.yaml  (+16 more)
libraries/mecha/: .gitignore  .say.yaml  CLAUDE.md  Dockerfile  README.md  Taskfile.yml  UNIVERSAL-BACKEND.md  compose.yml  dapr.yaml  mecha.Dockerfile  mise.toml  tmpl.cue  tmpl_tool.cue
libraries/mecha-browser/: package.json  tsconfig.json
libraries/mecha-browser/src/: factory.ts  index.ts
libraries/mecha-browser/src/adapter/: pglite-collection.test.ts
libraries/mecha-browser/src/cdc/: listener.test.ts  listener.ts
libraries/mecha-browser/src/crud/: rest-handler.ts
libraries/mecha-browser/src/proxy/: caddy-to-msw.ts
libraries/mecha-browser/src/schema/: types.ts  validate.ts
libraries/mecha-browser/tests/: e2e.test.ts
libraries/mecha-browser/wasm/: build.sh
libraries/mecha-browser/wasm/blobl/: main.go
libraries/mecha/observability/: loki-config.yaml  prometheus.yml  promtail-config.yaml
libraries/mecha/proto/: buf.gen.yaml  buf.yaml  grouphello.proto  hello.proto  snapcards.proto
libraries/mecha/scripts/: benchmark.nu
libraries/mecha/services/app/: Dockerfile  healthcheck.sh
libraries/mecha/services/arroyo/: Dockerfile  arroyo-init.sh  healthcheck.sh
libraries/mecha/services/bifrost/: Dockerfile
libraries/mecha/services/cdc/: Dockerfile  healthcheck.sh  start-pgstream.sh
libraries/mecha/services/crud/: Dockerfile  healthcheck.sh
libraries/mecha/services/database/: 01-run-atlas-migrations.sh  Dockerfile  atlas.hcl  healthcheck.sh
libraries/mecha/services/garage/: Dockerfile.init  init-bucket.sh
libraries/mecha/services/mesh/: Dockerfile  entrypoint.sh  healthcheck.sh
libraries/mecha/services/mqtt/: Dockerfile
libraries/mecha/tests/: Dockerfile  entrypoint-events.sh  entrypoint.sh
libraries/pbtables/: .mise.toml  .pkgx.yaml  BUILD.bazel  Dockerfile  Dockerfile.cue  Taskfile.yml  bayt.cue  build.gradle.kts  settings.gradle.kts
libraries/pbtables/.bayt/: Dockerfile._bayt  Dockerfile.bayt  Dockerfile.build  Dockerfile.build_outs  Dockerfile.build_srcs  Dockerfile.integrate  Dockerfile.integrate_outs  Dockerfile.integrate_srcs  Dockerfile.ops  Dockerfile.ops_outs  Dockerfile.ops_srcs  Dockerfile.setup  Dockerfile.setup_outs  Dockerfile.setup_srcs  Taskfile.bayt.yml  Taskfile.build.yaml  Taskfile.doctor.yaml  Taskfile.generate.yaml  Taskfile.integrate.yaml  Taskfile.lint.yaml  Taskfile.setup.yaml  Taskfile.test.yaml  bayt.bayt.json  bayt.build.json  bayt.build_outs.json  bayt.build_srcs.json  bayt.doctor.json  bayt.generate.json  bayt.integrate.json  bayt.integrate_outs.json  bayt.integrate_srcs.json  bayt.lint.json  bayt.ops.json  bayt.ops_outs.json  bayt.ops_srcs.json  bayt.setup.json  bayt.setup_outs.json  bayt.setup_srcs.json  bayt.test.json  compose._bayt.closure.yaml  (+22 more)
libraries/ui-constraints/: package.json
libraries/ui-constraints/css/: tokens.css
libraries/ui-constraints/eslint/: index.mjs
libraries/ui-constraints/playwright/: camera-helpers.ts  visual-lint.ts
libraries/xdocker/: Dockerfile  README.md  docker.sources.dockerfile  gradle.sources.dockerfile  jdk.dockerfile  node.dockerfile  pnpm.sources.dockerfile
libraries/xproto/: .mise.toml  .pkgx.yaml  BUILD.bazel  Cargo.toml  Dockerfile  Dockerfile.cue  Taskfile.yml  bayt.cue  buf.cargo.gen.yaml  buf.go.gen.yaml  buf.gradle.gen.yaml  buf.pnpm.gen.yaml  buf.poetry.gen.yaml  buf.yaml  build.gradle.kts  build.rs  descriptor.dockerfile  docker.cue  go.mod  package.json  settings.gradle.kts  tsconfig.json  xproto.rs
libraries/xproto/.bayt/: Dockerfile._bayt  Dockerfile.build  Dockerfile.build_outs  Dockerfile.build_srcs  Dockerfile.descriptor  Dockerfile.descriptor_outs  Dockerfile.descriptor_srcs  Dockerfile.gen-go  Dockerfile.integrate  Dockerfile.integrate_outs  Dockerfile.integrate_srcs  Dockerfile.ops  Dockerfile.ops_outs  Dockerfile.ops_srcs  Dockerfile.setup  Dockerfile.setup_outs  Dockerfile.setup_srcs  Taskfile.bayt.yml  Taskfile.build.yaml  Taskfile.descriptor.yaml  Taskfile.gen-go.yaml  Taskfile.generate.yaml  Taskfile.integrate.yaml  Taskfile.setup.yaml  Taskfile.test.yaml  Taskfile.yml  bayt.bayt.json  bayt.build.json  bayt.build_outs.json  bayt.build_srcs.json  bayt.descriptor.json  bayt.descriptor_outs.json  bayt.descriptor_srcs.json  bayt.doctor.json  bayt.gen-go.json  bayt.generate.json  bayt.integrate.json  bayt.integrate_outs.json  bayt.integrate_srcs.json  bayt.lint.json  (+40 more)
(+1281 files in other folders)
