load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")
load("//:junit5.bzl", "kt_junit5_test")

kt_jvm_library(
    name = "com.trash.libraries.logs",
    srcs = glob(["src/main/**/*.kt"]),
    resources = [ "src/main/resources/logback.xml" ],
    visibility = [ "//visibility:public" ]
)

kt_junit5_test(
    name = "LogsTest",
    size = "small",
    srcs = glob(["src/test/**/*.kt"]),
    test_package = "com.trash.libraries.logs",
    deps = [
        "@maven//:org_logcapture_logcapture_kotest",
    ],
)
